# app-log-service

./: .gitignore  CONTEXT.md  Cargo.toml  Makefile  Package.swift  README.md  askama.toml  tailwind.config.js
.github/workflows/: swift.yml
server/: .env.example  Cargo.toml  Dockerfile  Makefile  package-lock.json  package.json
server/src/: auth.rs  buffer.rs  config.rs  handlers.rs  main.rs  models.rs  storage.rs
server/static/js/: dashboard.js
server/templates/components/: log_table.html  modals.html  stats.html
src/: display.rs  html.rs  main.rs  request_manager.rs  tags.rs
swift/: Package.swift
swift/Sources/AppLogService/: DeviceIdentifier.swift  LogEntry.swift  LogLevel.swift  LogTransport.swift  Logger.swift
swift/Tests/AppLogServiceTests/: LogEntryTests.swift  LoggerTests.swift
templates/: base.html  dashboard.html  empty.html
templates/components/: controls.html
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: columns.tsx  dashboard.tsx  level-badge.tsx  log-data-table.tsx  log-detail-panel.tsx  stats-bar.tsx  tag-badge.tsx  theme-provider.tsx  toolbar.tsx
web/src/components/ui/: badge.tsx  checkbox.tsx  dropdown-menu.tsx  table.tsx  tooltip.tsx
web/src/hooks/: use-log-store.ts  use-log-stream.ts  use-preferences.ts
web/src/lib/: api.ts  utils.ts
web/src/types/: log-entry.ts
